--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "contributors": [
     "Benjamin Eidelman <beneidel@gmail.com>"
   ],
-  "bin": {
-  },
+  "bin": {},
   "scripts": {
-    "test": "qunit -c ./src/jsondiffpatch.js -d jsondiffpatch:./src/jsondiffpatch -t ./test/test.js",
-    "minify": "uglifyjs ./src/jsondiffpatch.js > ./jsondiffpatch.min.js"
+    "test": "./node_modules/.bin/mocha --reporter spec --recursive ./test"
   },
-  "main": "./src/jsondiffpatch",
+  "main": "./src/main",
   "repository": {
     "type": "git",
     "url": "git://github.com/benjamine/JsonDiffPatch.git"
@@ -24,7 +22,10 @@
   ],
   "devDependencies": {
     "qunit": "0.5.x",
-    "uglify-js": "1.3.x"
+    "uglify-js": "1.3.x",
+    "mocha": "~1.17.1",
+    "expect.js": "~0.2.0",
+    "browserify": "~3.24.11"
   },
   "bundleDependencies": [],
   "license": "MIT",
@@ -33,7 +34,7 @@
   },
   "dependencies": {},
   "optionalDependencies": {
-      "cli-color": ">=0.1.7"
+    "cli-color": ">=0.1.7"
   },
   "engines": {
     "node": "*"
